# VelocityEngine

./: .gitattributes  .gitignore  1  CMakeLists.txt  COOM  Makefile  README.md  TODO.md  VelEngine  \  a.out  analysis.txt  color.h  compmap  compmap.cpp  compmap.py  config.h  draw.cpp  draw.h  entity.cpp  entity.h  globals.h  gm_format.txt  load.cpp  load.h  logging.cpp  logging.h  main.cpp  map.gm  map.gms  perf.data  perf.data.old  player.cpp  player.h  render.cpp  render.h  test_rainbow.gms  test_room.gms  util.cpp  util.h  (+1 more)
.github/workflows/: cmake.yml
map/: test_block.gms  test_room.gms
src/: CMakeLists.txt  color.cpp  compmap.cpp  config.h  entity.cpp  entity_list.h  gamestate.h  load.cpp  load.h  logging.cpp  logging.h  main.cpp  player.cpp  render.cpp  render.h  ui.cpp  ui.h  util.cpp  util.h  vec2.h
